[package]
name = "uvz-auther"
version = "1.0.0"
description = "An Authenticator App :)"
authors = ["uvz0"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uvz_auther_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
tauri-plugin-clipboard-manager = "2.0.0"
[profile.release]
opt-level = "s" 
lto = "thin"         
panic = "abort"       
strip = true          
