[package]
name = "wauther"
version = "1.1.0"
description = "An Authenticator App :)"
authors = ["AstroJr0"]
edition = "2026"
license = "MIT"

[lib]
name = "w_auther_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
tauri-plugin-clipboard-manager = "2.0.0"
[profile.release]
opt-level = "s" 
lto = "thin"         
panic = "abort"       
strip = true          
